--- a/mystyle.css
+++ b/mystyle.css
@@ -6,6 +6,17 @@
     background-color: black;
 }
 
+.images {
+    display: flex;
+    flex-direction: row;
+}
+
+.images > button{
+    height: 30px;
+    color: black;
+    margin-top: 40%;
+}
+
 .header {
     display: flex;
     flex-direction: row;
