--- a/mystyle.css
+++ b/mystyle.css
@@ -11,10 +11,24 @@
     flex-direction: row;
 }
 
-.images > button{
+.images > button {
     height: 30px;
-    color: black;
     margin-top: 40%;
+}
+
+.trailers > button {
+    height: 30px;
+    margin-top: 12%;
+}
+
+.featuredTodayImages > button {
+    height: 30px;
+    margin-top: 20%;
+}
+
+.trailers2 > button {
+    height: 30px;
+    margin-top: 14%;
 }
 
 .header {
@@ -23,6 +37,43 @@
     height: 80px;
     justify-content: space-between;
 }
+
+.display-right {
+    opacity: 1;
+    cursor: pointer;
+    border-radius: 4px;
+    color: #fff;
+    background: rgba(18, 18, 18, 0.45);
+    border-color: rgba(255, 255, 255, 0.7);
+    border-style: solid;
+    border-width: 1px;
+    font-size: 1.5rem;
+    line-height: 0;
+    /*position: absolute;*/
+    transition: all .25s ease-out;
+    z-index: 5;
+    top: 40%;
+    padding: 0.75rem 0.25rem;
+}
+
+.display-left {
+    opacity: 1;
+    cursor: pointer;
+    border-radius: 4px;
+    color: #fff;
+    background: rgba(18, 18, 18, 0.45);
+    border-color: rgba(255, 255, 255, 0.7);
+    border-style: solid;
+    border-width: 1px;
+    font-size: 1.5rem;
+    line-height: 0;
+    /*position: absolute;*/
+    transition: all .25s ease-out;
+    z-index: 5;
+    top: 40%;
+    padding: 0.75rem 0.25rem;
+}
+
 
 .logo {
     width: 15%;
