--- a/mystyle.css
+++ b/mystyle.css
@@ -41,6 +41,7 @@
 .image4{
     width: 15%;
     height: 15%;
+    margin-top: 10px;
 }
 
 .movie-info{
@@ -60,6 +61,14 @@
 .description{
     display: flex;
     flex-direction: column;
+}
+
+.description >h3{
+    margin: 10px auto;
+}
+
+.description >p{
+    margin: 10px auto;
 }
 
 .display-right {
@@ -348,6 +357,10 @@
     }
 
     .content {
+        width: 100%;
+    }
+
+    .movie-info{
         width: 100%;
     }
 
