--- a/mystyle.css
+++ b/mystyle.css
@@ -178,9 +178,13 @@
 
 .upNext {
     margin-left: 10%;
+    width: 50%;
+    height: 30%;
 }
 
 .trailers {
+    width: 100%;
+    height: 30%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -216,6 +220,10 @@
     height: 50%;
 }
 
+.featuredToday{
+    width: 100%;
+    height: 15%;
+}
 
 .featuredToday > h1 {
     color: goldenrod;
@@ -293,7 +301,7 @@
 }
 
 .images > img {
-    width: 100%;
+    width: 90%;
     height: 400px;
 }
 
@@ -423,6 +431,7 @@
     .featuredTodayImages {
         justify-content: space-between;
     }
+
 
     .featuredToday > h1 {
         text-align: center;
