--- a/mystyle.css
+++ b/mystyle.css
@@ -38,13 +38,13 @@
     justify-content: space-between;
 }
 
-.image4{
+.image4 {
     width: 15%;
     height: 15%;
     margin-top: 10px;
 }
 
-.movie-info{
+.movie-info {
     display: flex;
     flex-direction: column;
     background-color: lightgrey;
@@ -53,21 +53,21 @@
     border: solid 2px white;
 }
 
-.upper-half{
+.upper-half {
     display: flex;
     flex-direction: row;
 }
 
-.description{
+.description {
     display: flex;
     flex-direction: column;
 }
 
-.description >h3{
+.description > h3 {
     margin: 10px auto;
 }
 
-.description >p{
+.description > p {
     margin: 10px auto;
 }
 
@@ -112,7 +112,7 @@
     width: 15%;
 }
 
-.logoImage{
+.logoImage {
     width: 100%;
     height: 40px;
 }
@@ -218,7 +218,7 @@
     height: 50%;
 }
 
-.featuredToday{
+.featuredToday {
     width: 100%;
     height: 15%;
 }
@@ -298,7 +298,7 @@
     width: 40%;
 }
 
-.images > img {
+.images > a > img {
     width: 90%;
     height: 400px;
 }
@@ -355,13 +355,14 @@
     color: gray;
     text-align: center;
 }
-.content > table{
+
+.content > table {
     background-color: white;
     width: 60%;
     margin-top: 30px;
 }
 
-.movie{
+.movie {
     display: flex;
     flex-direction: column;
     background-color: lightgrey;
@@ -379,7 +380,7 @@
         width: 100%;
     }
 
-    .movie-info{
+    .movie-info {
         width: 100%;
     }
 
@@ -397,7 +398,7 @@
         margin: 0px;
     }
 
-    .images > img {
+    .images > a > img {
         width: 100%;
         height: 600px;
     }
