--- a/mystyle.css
+++ b/mystyle.css
@@ -11,6 +11,12 @@
     flex-direction: row;
 }
 
+.image5{
+    width: 25%;
+    height: 90%;
+    margin-top: 10px;
+}
+
 .images > button {
     height: 30px;
     margin-top: 40%;
@@ -39,8 +45,8 @@
 }
 
 .image4 {
-    width: 15%;
-    height: 15%;
+    width: 100%;
+    height: 100%;
     margin-top: 10px;
 }
 
@@ -49,6 +55,7 @@
     flex-direction: column;
     background-color: lightgrey;
     width: 60%;
+    height: 200px;
     margin-left: 20%;
     border: solid 2px white;
 }
@@ -56,11 +63,24 @@
 .upper-half {
     display: flex;
     flex-direction: row;
-}zz
+    width: 100%;
+    height: 65%;
+}
+
+.upper-half > a{
+    width: 25%;
+    height: 90%;
+}
+
+.lower-half {
+    height: 35%;
+    width: 100%;
+}
 
 .description {
     display: flex;
     flex-direction: column;
+    width: 75%;
 }
 
 .description > h3 {
