--- a/mystyle.css
+++ b/mystyle.css
@@ -11,6 +11,27 @@
     flex-direction: row;
 }
 
+.rate > label{
+    display: block;
+    cursor: pointer;
+    width: 50px;
+    background-color: darkgoldenrod;
+}
+
+.imageLink{
+    width: 100%;
+    height: 100%;
+}
+
+.imageLink > img{
+    width: 100%;
+    height: 100%;
+}
+
+.rate label:before{
+    content: '\f005';
+}
+
 .image5{
     width: 25%;
     height: 90%;
@@ -77,14 +98,36 @@
     width: 100%;
 }
 
+table {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+    margin: auto;
+}
+
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+
+td{
+    height: 100px;
+    width: 80px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
 .description {
     display: flex;
     flex-direction: column;
     width: 75%;
 }
 
-.description > h3 {
-    margin: 10px auto;
+.description > a > h3 {
+    text-align: center;
 }
 
 .description > p {
