--- a/mystyle.css
+++ b/mystyle.css
@@ -181,6 +181,10 @@ tr:nth-child(even) {
     height: 40px;
 }
 
+input:hover{
+    color: yellow;
+}
+
 .fanFavorites > a:hover {
     color: darkgoldenrod;
 }
@@ -346,10 +350,14 @@ tr:nth-child(even) {
     margin-top: 0px;
 }
 
+.whatToWatch > a{
+    width: 20%;
+}
+
 .whatToWatch > a > input {
     background-color: goldenrod;
     height: 45px;
-    padding: 0px 20px;
+    width: 100%;
     border-radius: 10%;
 }
 
@@ -534,9 +542,19 @@ tr:nth-child(even) {
         margin: 0px auto;
     }
 
-    .wathcListButton > input {
+    .wathcListButton > a {
         width: 50%;
         height: 35px;
+    }
+
+    .whatToWatch > a{
+        width: 70%;
+        height: 50px;
+    }
+
+    .whatToWatch > a > input{
+        width: 100%;
+        height: 100%;
     }
 
     .fromYourWatchList {
